# accfresh-be/api-routes/swagger/swagger.json
@@ -53,6 +53,43 @@
                 }
               }
             }
+        },
+        "/user/signup": {
+            "post": {
+              "description": "Register a new User",
+              "parameters": [
+                {
+                    "name": "User",
+                    "in": "body",
+                    "schema": {
+                        "type": "object",
+                        "required": ["username", "email", "password"],
+                        "properties": {
+                            "username": {
+                                "type": "string"
+                            },
+                            "email": {
+                                "type": "string"
+                            },
+                            "password": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+              ],
+              "responses": {
+                "200": {
+                    "description": "OK"
+                },
+                "400": {
+                    "description": "FAILED"
+                },
+                "default": {
+                    "description": "unexpected error"
+                }
+              }
+            }
         }
     }
 }
