# accfresh-be/domains/user/routes.js
@@ -1,6 +1,9 @@
 // domain functions
-const { validate, authenticateUser } = require('./controller');
+const { validateUser, authenticateUser, registerUser } = require('./controller');
+
+// utils
 const { responseJSON } = require('../../util/responseJSON');
+const { validateEmail } = require('../../util/email');
 
 const express = require('express');
 const router = express.Router();
@@ -9,12 +12,27 @@ const router = express.Router();
 router.post('/authenticate', async (req, res) => {
     let { email, password} = req.body;
 
-    const isValid = await validate(email, password);
+    const isValid = await validateUser(email, password);
     if (!isValid) return res.status(400).json(responseJSON('ID', 'Your email or password is invalid.'));
 
     try {
         const fetchedUser = await authenticateUser(email, password);
         res.status(200).json(responseJSON('S', 'Authenticate User successful.', { user: fetchedUser }));
+    } catch (e) {
+        res.status(400).json(responseJSON('SWR', e.message));
+    }
+});
+
+// sign up
+router.post('/signup', async(req, res) => {
+    let { username, email, password } = req.body;
+
+    const isValidEmail = await validateEmail(email);
+    if (!isValidEmail) return res.status(400).json(responseJSON('ID', 'Your email is invalid format.'));
+
+    try {
+        const registedUser = await registerUser(username, email, password);
+        res.status(200).json(responseJSON('S', 'Registering User successful.', { user: registedUser }));
     } catch (e) {
         res.status(400).json(responseJSON('SWR', e.message));
     }
